(Crash Report) Using "Auto IK" on FK controls with Rigify will crash Blender. (MacOS) #75649

Closed
opened 2020-04-12 16:27:45 +02:00 by Timothy Cook · 18 comments

System Information
Operating system: Darwin-19.4.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 580 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.8.24

Blender Version
Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-11 19:01, hash: 0a747cd4e3
Worked: (newest version of Blender that worked as expected)

Short description of error
If Auto IK is turned on in the pose option and you attempt to move the arm FK controls Blender will crash.

I made a report for Windows too because the issue doesn't crash Blender in that OS but locks the controls where you can not move the arm. Iassuming the two are related but I don't know for sure, so I separated the reports.
https://developer.blender.org/T75640

*Generate a Rigify Rig
*Enable Auto IK in the Pose options
*Enter into Pose mode
*Click on the Arm's FK control
*Hit G to move

**System Information** Operating system: Darwin-19.4.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 580 OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.8.24 **Blender Version** Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-11 19:01, hash: `0a747cd4e3` Worked: (newest version of Blender that worked as expected) **Short description of error** If Auto IK is turned on in the pose option and you attempt to move the arm FK controls Blender will crash. I made a report for Windows too because the issue doesn't crash Blender in that OS but locks the controls where you can not move the arm. Iassuming the two are related but I don't know for sure, so I separated the reports. https://developer.blender.org/T75640 *Generate a Rigify Rig *Enable Auto IK in the Pose options *Enter into Pose mode *Click on the Arm's FK control *Hit G to move
Author

Added subscriber: @CookItOff

Added subscriber: @CookItOff

#75640 was marked as duplicate of this issue

#75640 was marked as duplicate of this issue
Member

Added subscriber: @icappiello

Added subscriber: @icappiello
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Issue confirmed on OSX. 2.82a isn't affected.
this is not directly related to rigify itself
Any armature with auto-ik option enabled will crash.
Should be reported as a separate issue.

Issue confirmed on OSX. 2.82a isn't affected. this is not directly related to rigify itself Any armature with auto-ik option enabled will crash. Should be reported as a separate issue.
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

On Windows I can't get it to crash, but it seems that Auto-IK no longer considers a bone the end of the chain when it's not connected - meaning, the IK chain will go all the way up to the root!

On Windows I can't get it to crash, but it seems that Auto-IK no longer considers a bone the end of the chain when it's not connected - meaning, the IK chain will go all the way up to the root!

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

@CookItOff please take the time to test with older releases of Blender, to see if this was something recently introduced or something older. It really helps developers to have such information.

@CookItOff please take the time to test with older releases of Blender, to see if this was something recently introduced or something older. It really helps developers to have such information.
Member

@dr.sybren as reported 2.82a works fine.

@dr.sybren as reported 2.82a works fine.

@CookItOff or @icappiello , could you attach a test blend file? If possible, one that doesn't depend on Rigify? A complete Rigify rig is too complex to dive into, and would take up a lot of developer time if that's the only way to reproduce this issue.

@CookItOff or @icappiello , could you attach a test blend file? If possible, one that doesn't depend on Rigify? A complete Rigify rig is too complex to dive into, and would take up a lot of developer time if that's the only way to reproduce this issue.
Member

@dr.sybren can be reproduced in few clicks:

  1. just add 2 connected bones.
  2. Enable auto-ik from the property shelf.
  3. select the last bone and move it using G + mouse

anyway here is the sample file
1 disconnected chain
1 connected chain

EDIT:
replaced attached file
auto-ik_issue.blend

@dr.sybren can be reproduced in few clicks: 1. just add 2 connected bones. 2. Enable auto-ik from the property shelf. 3. select the last bone and move it using G + mouse anyway here is the sample file 1 disconnected chain 1 connected chain EDIT: replaced attached file [auto-ik_issue.blend](https://archive.blender.org/developer/F8471516/auto-ik_issue.blend)
Author

@dr.sybren I must have forgot to add which version it was working on with this report. I had made two separate bug reports for Windows and Mac because each version made Blender fault differently while performing the same action. The Windows version is locking up the bone controls with Auto IK enabled and trying to move said bone. And the Mac version is crashing when performing that same task.
Both version worked two version prior of the version I reported above.

I see that @icappiello upload a blend file so I won't bother uploading another.

Thanks

@dr.sybren I must have forgot to add which version it was working on with this report. I had made two separate bug reports for Windows and Mac because each version made Blender fault differently while performing the same action. The Windows version is locking up the bone controls with Auto IK enabled and trying to move said bone. And the Mac version is crashing when performing that same task. Both version worked two version prior of the version I reported above. I see that @icappiello upload a blend file so I won't bother uploading another. Thanks

This issue was referenced by 6547d9d3e2

This issue was referenced by 6547d9d3e2cb0eb0b3da8ebf3a96f6664f9c2610

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Do not report the same issue multiple times even though the results are different on different platforms

Do not report the same issue multiple times even though the results are different on different platforms

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Sebastian Parborg self-assigned this 2020-04-15 12:36:39 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75649
No description provided.