Fix T75649: Using "Auto IK" on FK controls with Rigify will crash Blender.

Fixed a coding mistake when adding temp IK chains with Auto-IK.
We need to use the data from the new temporary constraint.